# EM_UNIT_4_PARSER_ASYNC

./: .test.env  README.md  config.py  main.py  pyproject.toml  pytest.ini  spimex_downloader.py  spimex_parser.py
app/: main.py  schema.py  services.py  trading_router.py
db/: database.py  db_depends.py  model.py
parser/: main.py  spimex_downloader.py
tests/: conftest.py
tests/app/: conftest.py  test_trading_router.py
